Updated project to 1.1b61